--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">BookReturnReminder</string>
+    <string name="add_book">Add Book</string>
+    <string name="title">Title</string>
+    <string name="author">Author</string>
+    <string name="return_date">Return Date</string>
+    <string name="btn_save">Save</string>
 </resources>
