feat: Display text if no books in DB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="author">Author</string>
     <string name="return_date">Return Date</string>
     <string name="btn_save">Save</string>
+    <string name="add_a_book">Add a book</string>
 </resources>
