--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="return_date">Return Date</string>
     <string name="btn_save">Save</string>
     <string name="add_a_book">Add a book</string>
+    <string name="btn_cancel">Cancel</string>
 </resources>
