--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="btn_save">Save</string>
     <string name="add_a_book">Add a book</string>
     <string name="btn_cancel">Cancel</string>
+    <string name="scan">Scan</string>
 </resources>
