--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="add_book">Add Book</string>
     <string name="title">Title</string>
     <string name="author">Author</string>
-    <string name="select_date">Change date</string>
+    <string name="select_date">Change return date</string>
     <string name="return_date">Return date</string>
     <string name="btn_save">Save</string>
     <string name="add_a_book">Add a book</string>
